# epic-shelter

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
backend/: .env.example  requirements.txt
backend/app/: db.py  main.py  routes.py
backend/app/api/: deps.py
backend/app/connectors/: base.py  default.py  hydrolix.py  singlestore.py
backend/app/core/: config.py  database.py  monitoring.py
backend/app/db/: base.py
backend/app/models/: migration.py
backend/app/schemas/: connection.py  database_types.py  job.py  migration.py
backend/app/scripts/: migrate_job_chunks.py  migrate_to_uuid.py  mock_data.py
backend/app/services/: migration_service.py  parquet.py  parquet_gpu.py  parquet_service.py  schema_service.py
backend/exports/: eventsdata.parquet  eventsdata_batch_0.parquet  eventsdata_batch_1.parquet  eventsdata_batch_10.parquet  eventsdata_batch_2.parquet  eventsdata_batch_3.parquet  eventsdata_batch_4.parquet  eventsdata_batch_5.parquet  eventsdata_batch_6.parquet  eventsdata_batch_7.parquet  eventsdata_batch_8.parquet  eventsdata_batch_9.parquet
bk/: main.py
bk/connectors/: singlestore.py
bk/services/: parquet.py
engine/: main.py  requirements.txt
engine/connectors/: singlestore.py
engine/services/: job.py  s3.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/api/: migrations.ts
frontend/src/components/: CreateMigration.tsx  Layout.tsx  MigrationDetail.tsx  MigrationList.tsx  MigrationMetrics.tsx  (+1 more)
services/: parquet.py
(+36 files in other folders)
