[project]
name = "epic-shelter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.13.3",
    "aiomysql>=0.3.2",
    "alembic>=1.16.5",
    "fastapi>=0.128.7",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "singlestoredb>=1.16.9",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.39.0",
]
